Add sequence for dot1x, event-handler, flow-tracking, interface-defaults, int-groups, ip-client-source-int, ip-nat-part1.

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/event-handlers.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/event-handlers.j2
@@ -8,6 +8,12 @@
 {%     for handler in event_handlers | arista.avd.natural_sort('name') %}
 !
 event-handler {{ handler.name }}
+{%         if handler.actions.log is arista.avd.defined(true) and not handler.actions.bash_command is  arista.avd.defined %}
+   action log
+{%         endif %}
+{%         if handler.actions.increment_device_health_metric is arista.avd.defined %}
+   action increment device-health metric {{ handler.actions.increment_device_health_metric }}
+{%         endif %}
 {%         if handler.trigger is arista.avd.defined %}
 {%             if handler.trigger is arista.avd.defined("on-maintenance")
                   and handler.trigger_on_maintenance.operation is arista.avd.defined
