Cut(eos_cli_config_gen): Deprecated  data model

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos-intended-config.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos-intended-config.j2
@@ -233,9 +233,7 @@
 {% include 'eos/qos.j2' %}
 {# eos - priority flow control #}
 {% include 'eos/priority-flow-control.j2' %}
-{# Community-lists #}
-{% include 'eos/community-lists.j2' %}
-{# Community-lists, improved data model #}
+{# eos - ip community lists #}
 {% include 'eos/ip-community-lists.j2' %}
 {# IP Extended Community Lists #}
 {% include 'eos/ip-extcommunity-lists.j2' %}
