undo key removal.

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos-intended-config.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos-intended-config.j2
@@ -233,7 +233,9 @@
 {% include 'eos/qos.j2' %}
 {# eos - priority flow control #}
 {% include 'eos/priority-flow-control.j2' %}
-{# eos - ip community lists #}
+{# Community-lists #}
+{% include 'eos/community-lists.j2' %}
+{# Ip community-lists #}
 {% include 'eos/ip-community-lists.j2' %}
 {# IP Extended Community Lists #}
 {% include 'eos/ip-extcommunity-lists.j2' %}
