--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/filters.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/filters.j2
@@ -3,7 +3,8 @@
  Use of this source code is governed by the Apache License 2.0
  that can be found in the LICENSE file.
 #}
-{% if ip_community_lists is arista.avd.defined
+{% if community_lists is arista.avd.defined
+       or ip_community_lists is arista.avd.defined
        or peer_filters is arista.avd.defined
        or dynamic_prefix_lists is arista.avd.defined
        or prefix_lists is arista.avd.defined
@@ -15,7 +16,9 @@
        or as_path is arista.avd.defined %}
 
 ## Filters
-{## Community-lists, improved data model #}
+{## Community-lists #}
+{%     include 'documentation/community-lists.j2' %}
+{## Ip community-lists #}
 {%     include 'documentation/ip-community-lists.j2' %}
 {## Peer Filters #}
 {%     include 'documentation/peer-filters.j2' %}
