--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos-intended-config.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos-intended-config.j2
@@ -235,7 +235,7 @@
 {% include 'eos/priority-flow-control.j2' %}
 {# Community-lists #}
 {% include 'eos/community-lists.j2' %}
-{# Ip community-lists #}
+{# IP community-lists #}
 {% include 'eos/ip-community-lists.j2' %}
 {# IP Extended Community Lists #}
 {% include 'eos/ip-extcommunity-lists.j2' %}
