--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-traffic-engineering.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-traffic-engineering.j2
@@ -4,8 +4,7 @@
  that can be found in the LICENSE file.
 #}
 {# eos - router traffic engineering #}
-{# for AVD 5.0.0, the first part of the if statement will be removed #}
-{% if router_traffic_engineering is arista.avd.defined or router_traffic_engineering.enabled is arista.avd.defined(true) %}
+{% if router_traffic_engineering.enabled is arista.avd.defined(true) %}
 !
 router traffic-engineering
 {%     if router_traffic_engineering.segment_routing is arista.avd.defined %}
