Remove the preference.

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/community-lists.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/community-lists.j2
@@ -4,7 +4,7 @@
  that can be found in the LICENSE file.
 #}
 {# doc - community lists #}
-{% if community_lists is arista.avd.defined and not ip_community_lists is arista.avd.defined %}
+{% if community_lists is arista.avd.defined %}
 
 ### Community-lists
 
