--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/community-lists.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/community-lists.j2
@@ -4,7 +4,7 @@
  that can be found in the LICENSE file.
 #}
 {# eos - community lists #}
-{% if community_lists is arista.avd.defined and not ip_community_lists is arista.avd.defined %}
+{% if community_lists is arista.avd.defined %}
 !
 {%     for community_list in community_lists | arista.avd.natural_sort('name') %}
 {%         if community_list.action is arista.avd.defined %}
