--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/filters.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/filters.j2
@@ -18,7 +18,7 @@
 ## Filters
 {## Community-lists #}
 {%     include 'documentation/community-lists.j2' %}
-{## IP community-lists #}
+{## IP Community Lists #}
 {%     include 'documentation/ip-community-lists.j2' %}
 {## Peer Filters #}
 {%     include 'documentation/peer-filters.j2' %}
