--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/arp.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/arp.j2
@@ -17,7 +17,7 @@
 arp aging timeout default {{ arp.aging.timeout_default }}
 {%     endif %}
 {%     if arp.static_entries is arista.avd.defined %}
-{%         for vrf, entries in arp.static_entries | arista.avd.default([]) | groupby("vrf", default="default") | arista.avd.natural_sort %}
+{%         for vrf, entries in arp.static_entries | groupby("vrf", default="default") | arista.avd.natural_sort %}
 {%             for entry in entries | arista.avd.natural_sort("ipv4_address") %}
 {%                 set arp_entry_prefix = "arp" %}
 {%                 if vrf != "default" %}
