--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/ethernet-interfaces.j2
@@ -152,6 +152,7 @@
 {%             set vlan_id = ethernet_interface.vlan_id | arista.avd.default('-') %}
 {%             set client_protocol = ethernet_interface.encapsulation_vlan.client.protocol | arista.avd.default('-') %}
 {# The below if condition is to get client protocol from deprecated keys #}
+{# TODO: AVD6.0 below if block should be removed once the 'ethernet_interface.encapsulation_vlan.client.dot1q' and 'ethernet_interface.encapsulation_vlan.client.unmatched' are removed in AVD6.0 #}
 {%             if client_protocol == '-' %}
 {%                 if ethernet_interface.encapsulation_vlan.client.dot1q is arista.avd.defined %}
 {%                     set client_protocol = 'dot1q' %}
@@ -166,6 +167,7 @@
 {%             endif %}
 {%             set network_protocol = ethernet_interface.encapsulation_vlan.network.protocol | arista.avd.default('-') %}
 {# The below if condition is to get network protocol from deprecated keys #}
+{# TODO: AVD6.0 below if block should be removed once the 'ethernet_interface.encapsulation_vlan.network.dot1q' and 'ethernet_interface.encapsulation_vlan.network.client' are removed in AVD6.0 #}
 {%             if network_protocol == '-' %}
 {%                 if ethernet_interface.encapsulation_vlan.network.dot1q is arista.avd.defined %}
 {%                     set network_protocol = 'dot1q' %}
@@ -385,9 +387,7 @@
 {%     set ethernet_interface_ipv4 = namespace() %}
 {%     set ethernet_interface_ipv4.configured = false %}
 {%     for ethernet_interface in ethernet_interfaces | arista.avd.natural_sort('name') %}
-{%         if ethernet_interface.type is arista.avd.defined
-            and ethernet_interface.type in ['routed', 'l3dot1q']
-            and ethernet_interface.ip_address is arista.avd.defined %}
+{%         if ethernet_interface.ip_address is arista.avd.defined %}
 {%             set ethernet_interface_ipv4.configured = true %}
 {%             break %}
 {%         endif %}
@@ -395,9 +395,7 @@
 {%     set port_channel_interface_ipv4 = namespace() %}
 {%     set port_channel_interface_ipv4.configured = false %}
 {%     for port_channel_interface in port_channel_interfaces | arista.avd.natural_sort('name') %}
-{%         if port_channel_interface.type is arista.avd.defined
-              and port_channel_interface.type in ['routed', 'l3dot1q']
-              and port_channel_interface.ip_address is arista.avd.defined %}
+{%         if port_channel_interface.ip_address is arista.avd.defined %}
 {%             set port_channel_interface_ipv4.configured = true %}
 {%             break %}
 {%         endif %}
@@ -450,9 +448,7 @@
 {%     set ethernet_interface_ipv6 = namespace() %}
 {%     set ethernet_interface_ipv6.configured = false %}
 {%     for ethernet_interface in ethernet_interfaces | arista.avd.natural_sort('name') %}
-{%         if ethernet_interface.type is arista.avd.defined
-              and ethernet_interface.type in ['routed', 'l3dot1q']
-              and (ethernet_interface.ipv6_address is arista.avd.defined or ethernet_interface.ipv6_enable is arista.avd.defined(true)) %}
+{%         if ethernet_interface.ipv6_address is arista.avd.defined or ethernet_interface.ipv6_enable is arista.avd.defined(true) %}
 {%             set ethernet_interface_ipv6.configured = true %}
 {%             break %}
 {%         endif %}
@@ -460,9 +456,7 @@
 {%     set port_channel_interface_ipv6 = namespace() %}
 {%     set port_channel_interface_ipv6.configured = false %}
 {%     for port_channel_interface in port_channel_interfaces | arista.avd.natural_sort('name') %}
-{%         if port_channel_interface.type is arista.avd.defined
-              and port_channel_interface.type in ['routed', 'l3dot1q']
-              and (port_channel_interface.ipv6_address is arista.avd.defined or port_channel_interface.ipv6_enable is arista.avd.defined(true)) %}
+{%         if port_channel_interface.ipv6_address is arista.avd.defined or port_channel_interface.ipv6_enable is arista.avd.defined(true) %}
 {%             set port_channel_interface_ipv6.configured = true %}
 {%             break %}
 {%         endif %}
