--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/monitor-connectivity.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/monitor-connectivity.j2
@@ -22,7 +22,7 @@ monitor connectivity
 {%     endfor %}
 {%     if monitor_connectivity.local_interfaces is arista.avd.defined %}
 {%         set local_interfaces_cli = "local-interfaces " ~ monitor_connectivity.local_interfaces %}
-{%         if monitor_connectivity.address_only is arista.avd.defined(true) %}
+{%         if monitor_connectivity.address_only | arista.avd.default(true) %}
 {%             set local_interfaces_cli = local_interfaces_cli ~ " address-only" %}
 {%         endif %}
    {{ local_interfaces_cli }} default
@@ -37,7 +37,7 @@ monitor connectivity
 {%             endif %}
 {%             if host.local_interfaces is arista.avd.defined %}
 {%                 set local_interfaces_cli = "local-interfaces " ~ host.local_interfaces %}
-{%                 if host.address_only is arista.avd.defined(true) %}
+{%                 if host.address_only | arista.avd.default(true) %}
 {%                     set local_interfaces_cli = local_interfaces_cli ~ " address-only" %}
 {%                 endif %}
       {{ local_interfaces_cli }}
@@ -60,7 +60,7 @@ monitor connectivity
 {%             endfor %}
 {%             if vrf.local_interfaces is arista.avd.defined %}
 {%                 set local_interfaces_cli = "local-interfaces " ~ vrf.local_interfaces %}
-{%                 if vrf.address_only is arista.avd.defined(true) %}
+{%                 if vrf.address_only | arista.avd.default(true) %}
 {%                     set local_interfaces_cli = local_interfaces_cli ~ " address-only" %}
 {%                 endif %}
       {{ local_interfaces_cli }} default
@@ -79,7 +79,7 @@ monitor connectivity
 {%                     endif %}
 {%                     if host.local_interfaces is arista.avd.defined %}
 {%                         set local_interfaces_cli = "local-interfaces " ~ host.local_interfaces %}
-{%                         if host.address_only is arista.avd.defined(true) %}
+{%                         if host.address_only | arista.avd.default(true) %}
 {%                             set local_interfaces_cli = local_interfaces_cli ~ " address-only" %}
 {%                         endif %}
          {{ local_interfaces_cli }}
