--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/ethernet-interfaces.j2
@@ -27,7 +27,8 @@
                 port_channel_interface.switchport.trunk.allowed_vlan is arista.avd.defined or
                 port_channel_interface.switchport.trunk.native_vlan_tag is arista.avd.defined(true) or
                 port_channel_interface.switchport.trunk.native_vlan is arista.avd.defined or
-                port_channel_interface.switchport.trunk.groups is arista.avd.defined) and
+                port_channel_interface.switchport.trunk.groups is arista.avd.defined or
+                port_channel_interface.switchport.enabled is arista.avd.defined(true)) and
                 (port_channel_interface.type is not arista.avd.defined or (port_channel_interface.type is arista.avd.defined and port_channel_interface.type not in ["switched", "routed"])) %}
 {%                 set description = ethernet_interface.description | arista.avd.default("-") %}
 {%                 set mode = port_channel_interface.switchport.mode | arista.avd.default('-') %}
@@ -72,7 +73,8 @@
                 ethernet_interface.switchport.trunk.allowed_vlan is arista.avd.defined or
                 ethernet_interface.switchport.trunk.native_vlan_tag is arista.avd.defined(true) or
                 ethernet_interface.switchport.trunk.native_vlan is arista.avd.defined or
-                ethernet_interface.switchport.trunk.groups is arista.avd.defined) and
+                ethernet_interface.switchport.trunk.groups is arista.avd.defined or
+                ethernet_interface.switchport.enabled is arista.avd.defined(true)) and
                 (ethernet_interface.type is not arista.avd.defined or (ethernet_interface.type is arista.avd.defined and ethernet_interface.type not in ["switched", "routed"])) %}
 {%                 set description = ethernet_interface.description | arista.avd.default("-") %}
 {%                 set mode = ethernet_interface.switchport.mode | arista.avd.default('-') %}
