--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
@@ -946,57 +946,56 @@ router bgp {{ router_bgp.as }}
 {%             endif %}
 {%         endfor %}
 {%     endif %}
-
 {# address family ipv4 BGP Labeled-Unicast activation #}
-{%     if router_bgp.address_family_ipv4_labaled_unicast is arista.avd.defined %}
+{%     if router_bgp.address_family_ipv4_labeled_unicast is arista.avd.defined %}
    !
    address-family ipv4 labeled-unicast
-{%         if router_bgp.address_family_ipv4_labaled_unicast.update_wait_for_convergence is arista.avd.defined(true) %}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.update_wait_for_convergence is arista.avd.defined(true) %}
       update wait-for-convergence
 {%         endif %}
-{%         if router_bgp.address_family_ipv4_labaled_unicast.bgp.missing_policy.direction_in_action is arista.avd.defined %}
-      bgp missing-policy direction in action {{ router_bgp.address_family_ipv4_labaled_unicast.bgp.missing_policy.direction_in_action }}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.bgp.missing_policy.direction_in_action is arista.avd.defined %}
+      bgp missing-policy direction in action {{ router_bgp.address_family_ipv4_labeled_unicast.bgp.missing_policy.direction_in_action }}
 {%         endif %}
-{%         if router_bgp.address_family_ipv4_labaled_unicast.bgp.missing_policy.direction_out_action is arista.avd.defined %}
-      bgp missing-policy direction out action {{ router_bgp.address_family_ipv4_labaled_unicast.bgp.missing_policy.direction_out_action }}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.bgp.missing_policy.direction_out_action is arista.avd.defined %}
+      bgp missing-policy direction out action {{ router_bgp.address_family_ipv4_labeled_unicast.bgp.missing_policy.direction_out_action }}
 {%         endif %}
-{%         if router_bgp.address_family_ipv4_labaled_unicast.bgp.additional_paths.receive is arista.avd.defined(true) %}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.bgp.additional_paths.receive is arista.avd.defined(true) %}
       bgp additional-paths receive
 {%         endif %}
-{%         if router_bgp.address_family_ipv4_labaled_unicast.bgp.additional_paths.send.any is arista.avd.defined(true) %}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.bgp.additional_paths.send.any is arista.avd.defined(true) %}
       bgp additional-paths send any
-{%         elif router_bgp.address_family_ipv4_labaled_unicast.bgp.additional_paths.send.backup is arista.avd.defined(true) %}
+{%         elif router_bgp.address_family_ipv4_labeled_unicast.bgp.additional_paths.send.backup is arista.avd.defined(true) %}
       bgp additional-paths send backup
-{%         elif router_bgp.address_family_ipv4_labaled_unicast.bgp.additional_paths.send.ecmp is arista.avd.defined(true) %}
+{%         elif router_bgp.address_family_ipv4_labeled_unicast.bgp.additional_paths.send.ecmp is arista.avd.defined(true) %}
       bgp additional-paths send ecmp
-{%         elif router_bgp.address_family_ipv4_labaled_unicast.bgp.additional_paths.send.ecmp_limit is arista.avd.defined %}
+{%         elif router_bgp.address_family_ipv4_labeled_unicast.bgp.additional_paths.send.ecmp_limit is arista.avd.defined %}
       bgp additional-paths send ecmp limit {{ router_bgp.address_family_path_selection.bgp.additional_paths.send.ecmp_limit }}
-{%         elif router_bgp.address_family_ipv4_labaled_unicast.bgp.additional_paths.send.limit is arista.avd.defined %}
+{%         elif router_bgp.address_family_ipv4_labeled_unicast.bgp.additional_paths.send.limit is arista.avd.defined %}
       bgp additional-paths send limit {{ router_bgp.address_family_path_selection.bgp.additional_paths.send.limit }}
 {%         endif %}
-{%         if router_bgp.address_family_ipv4_labaled_unicast.bgp.next_hop_unchanged is arista.avd.defined(true) %}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.bgp.next_hop_unchanged is arista.avd.defined(true) %}
       bgp next-hop-unchanged
 {%         endif %}
-{%         for neighbor in router_bgp.address_family_ipv4_labaled_unicast.neighbors | arista.avd.natural_sort('ip_address') %}
+{%         for neighbor in router_bgp.address_family_ipv4_labeled_unicast.neighbors | arista.avd.natural_sort('ip_address') %}
 {%             if neighbor.activate is arista.avd.defined(true) %}
-         neighbor {{ neighbor.ip_address }} activate
+      neighbor {{ neighbor.ip_address }} activate
 {%             else %}
-         no neighbor {{ neighbor.ip_address }} activate
+      no neighbor {{ neighbor.ip_address }} activate
 {%             endif %}
 {%             if neighbor.additional_paths.receive is arista.avd.defined(true) %}
       neighbor {{ neighbor.ip_address }} additional-paths receive
 {%             endif %}
 {%             if neighbor.route_map_in is arista.avd.defined %}
-neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_in }} in
+      neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_in }} in
 {%             endif %}
 {%             if neighbor.route_map_out is arista.avd.defined %}
-neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_out }} out
+      neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_out }} out
 {%             endif %}
 {%             if neighbor.rcf_in is arista.avd.defined %}
-neighbor {{ neighbor.ip_address }} rcf in {{ neighbor.rcf_in }}
+      neighbor {{ neighbor.ip_address }} rcf in {{ neighbor.rcf_in }}
 {%             endif %}
 {%             if neighbor.rcf_out is arista.avd.defined %}
-neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}
+      neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}
 {%             endif %}
 {%             if neighbor.graceful_restart is arista.avd.defined(true) %}
       neighbor {{ neighbor.ip_address }} graceful-restart
@@ -1068,30 +1067,34 @@ neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}
       neighbor {{ neighbor.ip_address }} next-hop resolution v4-mapped-v6 translation disabled
 {%             endif %}
 {%         endfor %}
-{%         for network in router_bgp.address_family_ipv4_labaled_unicast.networks %}
-{%             set network_cli = "network " ~ network.prefix %}
-{%             if network.route_map is arista.avd.defined %}
-{%                 set network_cli = network_cli ~ " route-map " ~ network.route_map %}
-{%             endif %}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.networks is arista.avd.defined %}
+{%             for network in router_bgp.address_family_ipv4_labeled_unicast.networks %}
+{%                 set network_cli = "network " ~ network.prefix %}
+{%                 if network.route_map is arista.avd.defined %}
+{%                     set network_cli = network_cli ~ " route-map " ~ network.route_map %}
+{%                 endif %}
       {{ network_cli }}
-{%         endfor %}
-{%         for next_hop in router_bgp.address_family_ipv4_labaled_unicast.next_hops %}
-{%             set next_hop_cli = "next-hop " ~ next_hop.ip_address ~ " originate" %}
-{%             if next_hop.lfib_backup_ip_forwarding is arista.avd.defined(true) %}
-{%                 set next_hop_cli = next_hop_cli ~ " lfib-backup ip-forwarding" %}
-{%             endif %}
+{%             endfor %}
+{%         endif %}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.next_hops is arista.avd.defined %}
+{%             for next_hop in router_bgp.address_family_ipv4_labeled_unicast.next_hops %}
+{%                 set next_hop_cli = "next-hop " ~ next_hop.ip_address ~ " originate" %}
+{%                 if next_hop.lfib_backup_ip_forwarding is arista.avd.defined(true) %}
+{%                     set next_hop_cli = next_hop_cli ~ " lfib-backup ip-forwarding" %}
+{%                 endif %}
       {{ next_hop_cli }}
-{%         endfor %}
-{%         if router_bgp.address_family_ipv4_labaled_unicast.lfib_entry_installation_skipped is arista.avd.defined(true) %}
+{%             endfor %}
+{%         endif %}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.lfib_entry_installation_skipped is arista.avd.defined(true) %}
       lfib entry installation skipped
 {%         endif %}
-{%         if router_bgp.address_family_ipv4_labaled_unicast.label_local_termination is arista.avd.defined %}
-      label local-termination {{ router_bgp.address_family_ipv4_labaled_unicast.label_local_termination }}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.label_local_termination is arista.avd.defined %}
+      label local-termination {{ router_bgp.address_family_ipv4_labeled_unicast.label_local_termination }}
 {%         endif %}
-{%         if router_bgp.address_family_ipv4_labaled_unicast.graceful_restart is arista.avd.defined(true) %}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.graceful_restart is arista.avd.defined(true) %}
       graceful-restart
 {%         endif %}
-{%         if router_bgp.address_family_ipv4_labaled_unicast.neighbor_default.next_hop_self is arista.avd.defined(true) %}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.neighbor_default.next_hop_self is arista.avd.defined(true) %}
       neighbor default next-hop-self
 {%         endif %}
 {%         if router_bgp.address_family_ipv4_labeled_unicast.next_hop_resolution_ribs is arista.avd.defined %}
@@ -1109,13 +1112,15 @@ neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}
       next-hop resolution ribs {{ v4_bgp_lu_resolution_ribs | join(" ") }}
 {%             endif %}
 {%         endif %}
-{%         for tunnel_source_protocol in router_bgp.address_family_ipv4_labeled_unicast.tunnel_source_protocols %}
-{%             set tunnel_source_protocol_cli = "tunnel source-protocol " ~ tunnel_source_protocol.protocol %}
-{%             if tunnel_source_protocol.rcf is arista.avd.defined %}
-{%                 set tunnel_source_protocol_cli = tunnel_source_protocol_cli ~ " rcf " ~ tunnel_source_protocol.rcf %}
-{%             endif %}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.tunnel_source_protocols is arista.avd.defined %}
+{%             for tunnel_source_protocol in router_bgp.address_family_ipv4_labeled_unicast.tunnel_source_protocols %}
+{%                 set tunnel_source_protocol_cli = "tunnel source-protocol " ~ tunnel_source_protocol.protocol %}
+{%                 if tunnel_source_protocol.rcf is arista.avd.defined %}
+{%                     set tunnel_source_protocol_cli = tunnel_source_protocol_cli ~ " rcf " ~ tunnel_source_protocol.rcf %}
+{%                 endif %}
       {{ tunnel_source_protocol_cli }}
-{%         endfor %}
+{%             endfor %}
+{%         endif %}
 {%         if router_bgp.address_family_ipv4_labeled_unicast.aigp_session is arista.avd.defined %}
 {%             for aigp_session_type in ['ibgp','confederation','ebgp'] %}
 {%                 if router_bgp.address_family_ipv4_labeled_unicast.aigp_session[aigp_session_type] is arista.avd.defined(true) %}
