Refactor(eos_cli_config_gen,eos_designs): Update router_ospf.redistribute.x with enabled keys

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-ospf.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-ospf.j2
@@ -129,7 +129,7 @@ router ospf {{ process_id.id }}
 {%         endif %}
    {{ default_information_originate_cli }}
 {%     endif %}
-{%     if process_id.redistribute.static is defined %}
+{%     if process_id.redistribute.static.enabled is arista.avd.defined(true) %}
 {%         set redistribute_static_cli = "redistribute static" %}
 {%         if process_id.redistribute.static.include_leaked is arista.avd.defined(true) %}
 {%             set redistribute_static_cli = redistribute_static_cli ~ " include leaked" %}
@@ -139,7 +139,7 @@ router ospf {{ process_id.id }}
 {%         endif %}
    {{ redistribute_static_cli }}
 {%     endif %}
-{%     if process_id.redistribute.connected is defined %}
+{%     if process_id.redistribute.connected.enabled is arista.avd.defined(true) %}
 {%         set redistribute_connected_cli = "redistribute connected" %}
 {%         if process_id.redistribute.connected.include_leaked is arista.avd.defined(true) %}
 {%             set redistribute_connected_cli = redistribute_connected_cli ~ " include leaked" %}
@@ -149,7 +149,7 @@ router ospf {{ process_id.id }}
 {%         endif %}
    {{ redistribute_connected_cli }}
 {%     endif %}
-{%     if process_id.redistribute.bgp is defined %}
+{%     if process_id.redistribute.bgp.enabled is arista.avd.defined(true) %}
 {%         set redistribute_bgp_cli = "redistribute bgp" %}
 {%         if process_id.redistribute.bgp.include_leaked is arista.avd.defined(true) %}
 {%             set redistribute_bgp_cli = redistribute_bgp_cli ~ " include leaked" %}
